update repo addr

--- a/_config.yml
+++ b/_config.yml
@@ -69,4 +69,4 @@ theme: next
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/zhengyudi/zhengyudi.github.io.git
+  repo: git@github.com:zhengyudi/zhengyudi.github.io.git
