--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Vault 88
+title: Yudi Zheng
 subtitle:
 description: PhD @ USI
-author: Yudi Zheng
+author: Yudi Zheng (郑雨迪)
 language: en
 timezone:
 
