--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Yudi Zheng
 subtitle:
-description: PhD @ USI
+description: Researcher @ Oracle Labs
 author: Yudi Zheng (郑雨迪)
 language: en
 timezone:
